test/runtime/fail/expr/divide_by_zero.hy

// expect error: Attempt to divide by 0

let a = 3
let b = a / 0
